<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/display_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical">
<!-- Calculation Numbers-->
        <TextView
            android:id="@+id/txt_display_clicked_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:gravity="right"
            android:text=""
            android:textColor="@color/white"
            android:textSize="50sp"

            />
<!--Result-->
        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:gravity="right"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="50sp"

            />
<!--Backslash button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageView
                android:id="@+id/btn_backspace"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:outlineSpotShadowColor="@color/white"
                android:src="@drawable/backspace" />

        </LinearLayout>
<!-- Divider-->
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@color/gray"
            tools:ignore="MissingClass" />

<androidx.gridlayout.widget.GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    app:columnCount="4"
    app:rowCount="5"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card_Clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="2"
        app:layout_columnWeight="2"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/bg"
            android:background="@color/magenta"
            android:gravity="center"
            android:text="@string/c"
            android:textSize="40sp"/>

    </androidx.cardview.widget.CardView>
<androidx.cardview.widget.CardView
    android:id="@+id/card_percentage"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_rowWeight="1"
    app:layout_columnSpan="1"
    app:layout_columnWeight="1"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/btnbgcolor"
        android:layout_gravity="center"
        android:padding="20dp"
        android:src="@drawable/percent"
        app:tint="#FF66FF7F"
 />
</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_division"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/btnbgcolor"
            android:layout_gravity="center"
            android:padding="20dp"
            android:src="@drawable/divide"
            app:tint="#FF66FF7F"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/seven"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/btnoperatorcolor"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/x"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/_4"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/_5"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/_6"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/btnoperatorcolor"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="-"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/btnoperatorcolor"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="+"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/btnbgcolor"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_rowWeight="1"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:background="@color/btnoperatorcolor"
            android:gravity="center"
            android:text="="
            android:textSize="40sp"
            />
    </androidx.cardview.widget.CardView>

</androidx.gridlayout.widget.GridLayout>
    </LinearLayout>


</RelativeLayout>